<resources>
    <string name="app_name">FYP</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="running">Running</string>
    <string name="running_description">Running is a cardiovascular exercise which can improve cardiovascular health, burn calories, and improve overall fitness.
        \n\nInstruction:
        \nFirst, keep your arms compact and relaxed, knees bent, and body tall to maintain proper posture throughout your run.
        \nThen, land with your midfoot directly under your center of gravity to avoid overstepping.
        \nFinally, lean forward slightly from your ankles, rather than your hips, to move forward more efficiently.</string>
    <string name="push_up">Push Up</string>
    <string name="push_up_description">Push up is a versatile body weight exercise that target multiple muscle groups to build upper body strength and endurance.
        \n\nInstruction:
        \nFirst, start in a plank position with your hands shoulder-width apart and palms flat on the floor, making sure your wrists are aligned with your shoulders.
        \nThen, bend your elbows close to your sides, then lower your body toward the floor by lowering your chest until it is almost touching the ground.
        \nFinally, push your arms through your palms to extend and return to the starting position, fully straightening your elbows without locking them.</string>
    <string name="jump_rope">Jump Rope</string>
    <string name="jump_rope_description">Jump rope is a dynamic cardiovascular exercise that engages the entire body while improving coordination, agility, and endurance.
        \n\nInstruction:
        \nFirst, stay low when jumping to conserve energy and avoid fatigue.
        \nThen, keep your arms up and in a circular motion at your waist and elbows ensures effective rope rotation.
        \nFinally, maintain correct body position when jumping rope, with hips over knees and shoulders over hips, like a boxer in the boxing ring.</string>
    <string name="squat_jump">Squat Jump</string>
    <string name="squat_jump_description">Squat Jump is an explosive lower body exercise that combines squats and jumps, which effectively targeting different muscle groups to increase strength and power.
        \n\nInstruction:
        \nFirst, lower your body into a squat position while keeping your core tight.
        \nThen, explode upward with force, extending your legs and hips to jump off the ground.
        \nFinally, ensure a soft and controlled landing by landing quietly, absorbing impact with bent knees to protect your joints
    </string>
    <string name="burpee">Burpee</string>
    <string name="burpee_description">Burpee is dynamic full-body exercise that involve squatting, jumping, and push-ups, which enhances cardiovascular fitness, strength, and endurance
        \n\nInstruction:
        \nFirst, bend the knees and place the hands on the floor, then step the legs back individually to assume a plank position.
        \nThen, lower the chest to the floor, perform a push-up, and then push back up to return to the plank position.
        \nFinally, step the legs back in, stand up, and return to the starting position.
    </string>
    <string name="jumping_jack">Jumping Jack</string>
    <string name="jumping_jack_description">Jumping jack is a dynamic full-body exercise that can improve cardiovascular endurance, coordination, and overall agility.
        \n\nInstruction:
        \nFirst, start standing with arms by your side and legs together.
        \nThen, jump, spreading your legs slightly wider than shoulder-width apart while raising your arms above your head.
        \nFinally, return to the starting position and repeat, aiming for as many repetitions.
    </string>
    <string name="high_knees">High knees</string>
    <string name="high_knees_description">High knees are an effective exercise for improving cardiovascular fitness and strengthening lower body muscles.
        \n\nInstruction:
        \nFirst, stand upright with feet hip width apart.
        \nThen, run on the spot bringing the knee ups as high as possible.
        \nFinally, return to the starting position and repeat, aiming for as many repetitions.
    </string>
    <string name="mountain_climbers">Mountain Climbers</string>
    <string name="mountain_climbers_description">Mountain climbers are a dynamic exercise that targets multiple muscle groups, including the core, shoulders, and legs which help to build overall strength and endurance.
        \n\nInstruction:
        \nFirst, ensure your body forms a straight line from head to heels, with shoulders directly over your wrists, engaging your core muscles.
        \nThen, avoid lifting the hips too high, as it can cause the shoulders to move away from the wrists, limiting the range of motion and reducing core engagement.
        \nFinally, focus on a controlled rhythm to maximize strength without sacrificing form.
    </string>
    <string name="crunches">Crunches</string>
    <string name="crunches_description">Crunches are an effective exercise for strengthening the abdominal muscles which can help to improve core stability and posture.
        \n\nInstruction:
        \nFirst, lie down with your feet hip-distance apart and fingertips touching your heels.
        \nThen, place your hands behind your head, elbows open, and lift your chest, making sure your lower back is pressed into the mat and your shoulder blades are off the floor.
        \nFinally, keep your neck neutral and focus on engaging your core muscles to feel the workout along the midline for maximum effectiveness.
    </string>
    <string name="butt_kick">Butt Kick</string>
    <string name="butt_kick_description">Butt kick is a cardio exercise that targets the gluteus and hamstrings while improving cardiovascular health.
        \n\nInstruction:
        \nFirst, run in place and aim to kick your heels up to touch your butt with each step.
        \nThen, maintaining a fast pace and regular breathing and focus on landing on your toes.
        \nFinally, keeping your chest up, and tightening your abs for proper form and effectiveness.
    </string>
    <string name="inchworm">Inchworm</string>
    <string name="inchworm_description">Inchworm is a training exercise that can strengthen your arms, chest, shoulders, and core.
    \n\nInstruction:
    \nFirst, start by standing with your feet hip-width apart, then centering on your hips, place your hands as far in front of you as possible.
    \nThen, hold the extended plank position briefly to engage your core and shoulders.
    \nFinally, move your hands back to your feet, optionally standing or back to your toes, and repeat to stretch your hamstrings and warm up your core.
    </string>
    <string name="bicycle_crunch">Bicycle Crunch</string>
    <string name="bicycle_crunch_description">Bicycle crunch is an effective ab exercise which can help tone your midsection and slim your waist.
        \n\nInstruction:
        \nFirst, start by lying on your back with your knees bent and lifted off the floor, working your abdominal muscles by pulling your belly button toward your spine.
        \nThen, place your hands behind your head with your elbows open, making sure to keep them out of your peripheral vision to avoid straining your neck muscles.
        \nNext, alternate bringing one knee closer to your chest while extending the other leg to fully engage your quadriceps.
        \nFinally, rotate your torso so that your opposite elbow is closer to your knee and your shoulder blade away from the mat/floor.
    </string>
    <string name="lateral_shuffle">Lateral Shuffle</string>
    <string name="lateral_shuffle_description">Lateral Shuffle is an exercise that strengthens the calves, hamstrings, quadriceps, hip flexors, and gluteal muscles, helping to improve coordination and agility during difficult side-to-side movements.
        \n\nInstruction:
        \nFirst, start standing with your feet hip-distance apart and your knees deeply bent.
        \nThen, placing your hands in front of your chest in a protective position, begin moving your right foot, followed by your left foot.
        \nFinally, shuffle to the right four steps from right to left, then move left to four steps from left to right, and then continue shuffling from right to left for the required time.
    </string>
    <string name="skater_jump">Skater Jump</string>
    <string name="skater_jump_description">Skater jump is an aerobic exercise that involves jumping in a pattern that transfers body weight from one side to the other, helping to improve balance and coordination.
        \n\nInstruction:
        \nFirst, bend your legs slightly and place your arms at your sides, then jump to the right side while extending your left foot back and your left arm forward.
        \nThen, alternate sides by jumping to the left and switching the position of your legs and arms with each jump.
        \nFinally, shuffle to the right four steps from right to left, then move left to four steps from left to right, and then continue shuffling from right to left for the required time.
    </string>
    <string name="jumping_lunges">Jumping Lunges</string>
    <string name="jumping_lunges_description">Jumping Lunges are a cardio exercise that targets the gluteus and hamstrings while improving cardiovascular health.
        \n\nInstruction:
        \nFirst, run in place and aim to kick your heels up to touch your butt with each step.
        \nThen, maintaining a fast pace and regular breathing and focus on landing on your toes.
        \nFinally, keeping your chest up, and tightening your abs for proper form and effectiveness.
    </string>
    <string name="dumbbell_squat">Dumbbell Squat</string>
    <string name="dumbbell_squat_description">Dumbbell squat is an exercise that targets multiple muscle groups including the quadriceps and hamstrings to build lower body strength and stability.
        \n\nInstruction:
        \nFirst, start by standing up straight, holding a dumbbell in each hand with your palms facing your legs.
        \nSecondly, keep your feet shoulder-width apart, toes slightly outward, and always keep your back straight and your head up.
        \nFinally, slowly lower your torso by bending your knees until your thighs are parallel to the floor, then exhale and push through your heels to return to the starting position.
    </string>
    <string name="dumbbell_lunges">Dumbbell Lunges</string>
    <string name="dumbbell_lunges_description">Dumbbell lunge is a unilateral lower body exercise that improves lower body strength and stability.
        \n\nInstruction:
        \nFirst, hold dumbbells at shoulder width with maintain proper posture.
        \nThen, take step forward with one leg, lowering your body until your front thigh is parallel to the ground.
        \nFinally, ensure your front knee doesn't extend past your toes, then push through your feet to return to standing.
    </string>
    <string name="dumbbell_shoulder_press">Dumbbell Shoulder Press</string>
    <string name="dumbbell_shoulder_press_description">Dumbbell shoulder press is a strength training exercise that targets the deltoid muscles of the shoulders.
        \n\nInstruction:
        \nFirst, sit on a bench with back support and hold a dumbbell in each hand at shoulder height, palms facing forward.
        \nThen, exhale as you push the dumbbells up until they touch the top, then inhale as you lower the dumbbells to shoulder height.
        \nFinally, repeat for the desired number of repetitions and ensure controlled movement and proper wrist rotation throughout.
    </string>
    <string name="dumbbell_bent_over_rows">Dumbbell Bent Over Rows</string>
</resources>