<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dddddd"
    tools:context=".CardioExercisePlan3Activity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Chronometer
                android:id="@+id/plan3Timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alike"
                android:textAlignment="center"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/CardioExercisePlan3Card1"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/InchwormsImageView"
                        android:layout_width="173dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/inchworms" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/InchwormsTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alike"
                            android:text="@string/inchworm"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/InchwormsTextView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alike"
                            android:text="4 SETS, 7 reps per set"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardioExercisePlan3Card2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/BicycleCrunchesImageView"
                        android:layout_width="173dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/bicycle_crunches" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/BicycleCrunchTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alike"
                            android:text="@string/bicycle_crunch"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/BicycleCrunchTextView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alike"
                            android:text="5 SETS, 8 reps per side"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardioExercisePlan3Card3"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/LateralShuffleImageView"
                        android:layout_width="173dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/lateral_shuffle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/LateralShuffleTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alike"
                            android:text="@string/lateral_shuffle"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/LateralShuffleTextView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alike"
                            android:text="2 SETS, 15 reps per direction"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardioExercisePlan3Card4"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/SkaterJumpImageView"
                        android:layout_width="173dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/skater_jump" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/SkaterJumpTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alike"
                            android:text="@string/skater_jump"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/SkaterJumpTextView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alike"
                            android:text="3 SETS, 13 reps per set"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/CardioExercisePlan3Card5"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/JumpingLungesImageView"
                        android:layout_width="173dp"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/jumping_lunges" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/JumpingLungesTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alike"
                            android:text="@string/jumping_lunges"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/JumpingLungesTextView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/alike"
                            android:text="4 SETS, 10 reps per leg"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cardioPlan3startbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alike"
                    android:text="Start" />

                <Button
                    android:id="@+id/cardioPlan3StopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alike"
                    android:text="Stop" />

                <Button
                    android:id="@+id/cardioPlan3ResetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/alike"
                    android:text="Reset" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>